--- a/main.html
+++ b/main.html
@@ -7,7 +7,24 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+
+	<h1>Bali</h1>
+	<br>
+	<p>Bali is an Indonesian island known for its stunning natural beauty, vibrant culture, and tourist attractions. It's famous for its lush rice terraces, pristine beaches, and diverse marine life, making it a popular destination for travelers seeking relaxation and adventure. Bali is also renowned for its Hindu temples, traditional dance performances, and artistic traditions, making it a cultural hotspot in Southeast Asia. Whether you're looking for a tranquil beach getaway or an immersive cultural experience, Bali offers a unique and unforgettable destination.</p>
+	<ol>
+		<li><strong><em>Uluwatu Temple</em></strong></li>
+		<li>Ubud</li>
+		<li>Tegallalang Rice Terraces</li>
+		<li>Sacred Monkey Forest Sanctuary</li>
+		<li>Tanah Lot Temple</li>
+	</ol>
+	<ul>
+		<li><strong><em>Nasi Goreng</em></strong></li>
+		<li>Mie Goreng</li>
+		<li>Satay</li>
+		<li>Nasi Campur</li>
+		<li>Babi Guling</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
