--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<li>Tanah Lot Temple</li>
 	</ol>
 	<ul>
-		<li><strong><em>Nasi Goreng</em></strong></li>
+		<li><b><i>Nasi Goreng</i></b></li>
 		<li>Mie Goreng</li>
 		<li>Satay</li>
 		<li>Nasi Campur</li>
